# TauriCPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  build.ps1  vcpkg.json
include/tauricpp/: app.hpp  bridge.hpp  clipboard.hpp  dialog.hpp  embedded_dll.hpp  virtual_fs.hpp  window.hpp
sample/frontend/: index.html
sample/frontend/css/: style.css
sample/frontend/js/: app.js
sample/src/: main.cpp
src/: app.cpp  bridge.cpp  clipboard.cpp  dialog.cpp  embedded_dll.cpp  virtual_fs.cpp  window.cpp
tools/: pack_resources.py
